--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+  
   },
+  "eslintConfig": {
+  "rules": {
+    "@typescript-eslint/no-unused-vars": "warn"
+  }
+},
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@mantine/core": "^7.17.5",
